solving the nav showing black issue on mobile

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -90,7 +90,7 @@
 }
 @media (max-width: 980px) {
     .nav-mobile {
-        display: flex;
+        display: none;
     }
     .nav {
         display: none;
